# Virtual-AUTOSAR-Software-Component

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c
.github/workflows/: c-build.yml
stubs/: Rte_SeatbeltReminder_SWC.h  Std_Types.h  rte_stubs.c
swc/arxml/: SeatbeltReminder_SWC.arxml
swc/include/: SeatbeltReminder_SWC.h
swc/src/: SeatbeltReminder_SWC.c
